--- a/CoinViewTiki.iOS/CoinViewTiki.iOS.csproj
+++ b/CoinViewTiki.iOS/CoinViewTiki.iOS.csproj
@@ -123,6 +123,7 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Refit" Version="5.1.67" />
     <PackageReference Include="Xamarin.Forms" Version="4.8.0.1364" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
   </ItemGroup>
