--- a/CoinViewTiki.Android/CoinViewTiki.Android.csproj
+++ b/CoinViewTiki.Android/CoinViewTiki.Android.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Refit" Version="5.1.67" />
+    <PackageReference Include="Refractored.MvvmHelpers" Version="1.6.2" />
     <PackageReference Include="Xamarin.Forms" Version="4.8.0.1364" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
   </ItemGroup>
