--- a/CoinViewTiki.Android/CoinViewTiki.Android.csproj
+++ b/CoinViewTiki.Android/CoinViewTiki.Android.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MonkeyCache.FileStore" Version="1.3.0" />
+    <PackageReference Include="Prism.DryIoc.Forms" Version="7.2.0.1422" />
     <PackageReference Include="Refit" Version="5.1.67" />
     <PackageReference Include="Refractored.MvvmHelpers" Version="1.6.2" />
     <PackageReference Include="Xamarin.FFImageLoading" Version="2.4.11.982" />
