--- a/CoinViewTiki/CoinViewTiki.csproj
+++ b/CoinViewTiki/CoinViewTiki.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="Xamarin.FFImageLoading.Forms" Version="2.4.11.982" />
     <PackageReference Include="Xamarin.Forms" Version="4.8.0.1364" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
+    <PackageReference Include="Xamarin.Forms.PancakeView" Version="2.2.0.740" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Fonts" />
