--- a/CoinViewTiki.Android/CoinViewTiki.Android.csproj
+++ b/CoinViewTiki.Android/CoinViewTiki.Android.csproj
@@ -62,6 +62,7 @@
     <PackageReference Include="Xamarin.Forms" Version="4.8.0.1364" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
     <PackageReference Include="Xamarin.Forms.PancakeView" Version="2.2.0.740" />
+    <PackageReference Include="Xamarin.Forms.Skeleton" Version="2.0.0" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
@@ -74,9 +75,19 @@
     <None Include="Properties\AndroidManifest.xml" />
   </ItemGroup>
   <ItemGroup>
+    <AndroidResource Include="Resources\drawable-hdpi\left.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\listBg.png" />
+    <AndroidResource Include="Resources\drawable-ldpi\left.png" />
+    <AndroidResource Include="Resources\drawable-ldpi\listBg.png" />
+    <AndroidResource Include="Resources\drawable-mdpi\left.png" />
+    <AndroidResource Include="Resources\drawable-mdpi\listBg.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\left.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\listBg.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\left.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\listBg.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\left.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\listBg.png" />
     <AndroidResource Include="Resources\drawable\imgPlaceholder.png" />
-    <AndroidResource Include="Resources\drawable\left.png" />
-    <AndroidResource Include="Resources\drawable\listBg.png" />
     <AndroidResource Include="Resources\layout\Tabbar.xml" />
     <AndroidResource Include="Resources\layout\Toolbar.xml" />
     <AndroidResource Include="Resources\values\styles.xml" />
