--- a/CoinViewTiki.iOS/CoinViewTiki.iOS.csproj
+++ b/CoinViewTiki.iOS/CoinViewTiki.iOS.csproj
@@ -25,7 +25,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <MtouchArch>x86_64</MtouchArch>
-    <MtouchLink>SdkOnly</MtouchLink>
+    <MtouchLink>None</MtouchLink>
     <MtouchDebug>true</MtouchDebug>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhoneSimulator' ">
@@ -125,7 +125,6 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="akavache" Version="6.10.20" />
-    <PackageReference Include="MonkeyCache.FileStore" Version="1.3.0" />
     <PackageReference Include="Polly" Version="7.2.1" />
     <PackageReference Include="Prism.DryIoc.Forms" Version="7.2.0.1422" />
     <PackageReference Include="Refit" Version="5.1.67" />
@@ -145,6 +144,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <BundleResource Include="Resources\coinViewTikiLogo@2x.png" />
     <BundleResource Include="Resources\imgPlaceholder.png" />
     <BundleResource Include="Resources\left@2x.png" />
     <BundleResource Include="Resources\left@3x.png" />
