--- a/CoinViewTiki/CoinViewTiki.csproj
+++ b/CoinViewTiki/CoinViewTiki.csproj
@@ -12,7 +12,6 @@
 
   <ItemGroup>
     <PackageReference Include="akavache" Version="6.10.20" />
-    <PackageReference Include="MonkeyCache.FileStore" Version="1.3.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Polly" Version="7.2.1" />
     <PackageReference Include="Prism.DryIoc.Forms" Version="7.2.0.1422" />
@@ -47,6 +46,10 @@
     <EmbeddedResource Include="Fonts\proxima_nova_regular.ttf" />
     <None Remove="Fonts\proxima_nova_semibold.ttf" />
     <EmbeddedResource Include="Fonts\proxima_nova_semibold.ttf" />
+    <EmbeddedResource Update="Dialogs\AlertDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator></Generator>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Views\CoinDetailPage.xaml.cs">
@@ -54,6 +57,9 @@
     </Compile>
     <Compile Update="Views\CoinListPage.xaml.cs">
       <DependentUpon>CoinListPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="Dialogs\AlertDialog.xaml.cs">
+      <DependentUpon>AlertDialog.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
 </Project>
