--- a/CoinViewTiki.iOS/Info.plist
+++ b/CoinViewTiki.iOS/Info.plist
@@ -22,7 +22,7 @@
 	<key>CFBundleDisplayName</key>
 	<string>CoinViewTiki</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.joepboro.coinviewtiki.CoinViewTiki</string>
+	<string>com.jboro.coinviewtiki</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
 	<key>UILaunchStoryboardName</key>
