--- a/CoinViewTiki.iOS/Info.plist
+++ b/CoinViewTiki.iOS/Info.plist
@@ -24,12 +24,14 @@
 	<key>CFBundleIdentifier</key>
 	<string>com.jboro.coinviewtiki</string>
 	<key>CFBundleVersion</key>
-	<string>1.0</string>
+	<string>1.2</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>CFBundleName</key>
 	<string>CoinViewTiki</string>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/AppIcon.appiconset</string>
+	<key>CFBundleShortVersionString</key>
+	<string>2</string>
 </dict>
 </plist>
