--- a/CoinViewTiki.iOS/Info.plist
+++ b/CoinViewTiki.iOS/Info.plist
@@ -22,9 +22,9 @@
 	<key>CFBundleDisplayName</key>
 	<string>CoinViewTiki</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.jboro.coinviewtiki</string>
+	<string>com.jpboro.coinviewtiki</string>
 	<key>CFBundleVersion</key>
-	<string>1.2</string>
+	<string>1.3</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>CFBundleName</key>
